--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "firebase": "^4.12.1",
+    "google-maps": "^3.2.1",
     "vue": "^2.5.16",
     "vue-multiselect": "^2.1.0",
     "vue-router": "^3.0.1",
