--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "firebase": "^4.12.1",
     "google-maps": "^3.2.1",
     "vue": "^2.5.16",
