--- a/spa/package.json
+++ b/spa/package.json
@@ -53,6 +53,7 @@
     "nightwatch": "^0.9.12",
     "node-notifier": "^5.1.2",
     "node-sass": "^4.8.3",
+    "normalize.css": "^8.0.0",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
     "portfinder": "^1.0.13",
