--- a/spa/package.json
+++ b/spa/package.json
@@ -14,13 +14,13 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
-    "firebase": "^4.12.1",
+    "firebase": "^4.13.1",
     "google-maps": "^3.2.1",
     "vue": "^2.5.16",
     "vue-multiselect": "^2.1.0",
     "vue-router": "^3.0.1",
     "vue2-google-maps": "^0.8.11",
-    "vuefire": "^2.0.0-alpha.7"
+    "vuefire": "^1.4.5"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
