--- a/spa/package.json
+++ b/spa/package.json
@@ -50,6 +50,7 @@
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
+    "markerwithlabel": "^2.0.1",
     "nightwatch": "^1.0.6",
     "node-notifier": "^5.1.2",
     "node-sass": "^4.9.0",
