--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/chriskonings/do-more#readme",
   "dependencies": {
     "express": "^4.16.3",
+    "serve-static": "^1.13.2",
     "yelp-fusion": "^2.0.3"
   }
 }
