--- a/package.json
+++ b/package.json
@@ -1,20 +1,25 @@
 {
-  "name": "find-with-me",
+  "name": "do-more",
   "version": "1.0.0",
-  "description": "find things to do from people like you",
-  "main": "/server/index.js",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "start": "cd ./server && npm run start",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "test": "test"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/chriskonings/do-more.git"
   },
-  "author": "Chris Konings",
+  "author": "",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/chriskonings/do-more/issues"
   },
-  "homepage": "https://github.com/chriskonings/do-more#readme"
+  "homepage": "https://github.com/chriskonings/do-more#readme",
+  "dependencies": {
+    "express": "^4.16.3",
+    "serve-static": "^1.13.2",
+    "yelp-fusion": "^2.0.3"
+  }
 }
