--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "node index.js dev"
+    "dev": "node index.js dev",
+    "postinstall": "cd /spa && npm run build"
   },
   "repository": {
     "type": "git",
