--- a/spa/package.json
+++ b/spa/package.json
@@ -20,7 +20,8 @@
     "vue-multiselect": "^2.1.0",
     "vue-router": "^3.0.1",
     "vue2-google-maps": "^0.8.11",
-    "vuefire": "^1.4.5"
+    "vuefire": "^1.4.5",
+    "chalk": "^2.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -34,7 +35,6 @@
     "babel-preset-env": "^1.3.2",
     "babel-preset-stage-2": "^6.22.0",
     "babel-register": "^6.22.0",
-    "chalk": "^2.0.1",
     "chromedriver": "^2.27.2",
     "copy-webpack-plugin": "^4.0.1",
     "cross-spawn": "^5.0.1",
