--- a/spa/package.json
+++ b/spa/package.json
@@ -21,9 +21,8 @@
     "vue-router": "^3.0.1",
     "vue2-google-maps": "^0.8.11",
     "vuefire": "^1.4.5",
-    "chalk": "^2.0.1"
-  },
-  "devDependencies": {
+    "chalk": "^2.0.1",
+    "semver": "^5.3.0",
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.22.1",
     "babel-eslint": "^8.2.1",
@@ -64,7 +63,6 @@
     "rimraf": "^2.6.0",
     "sass-loader": "^7.0.1",
     "selenium-server": "^3.0.1",
-    "semver": "^5.3.0",
     "shelljs": "^0.7.6",
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^1.0.1",
@@ -75,6 +73,8 @@
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-server": "^2.9.1",
     "webpack-merge": "^4.1.0"
+  },
+  "devDependencies": {
   },
   "engines": {
     "node": ">= 6.0.0",
