--- a/spa/package.json
+++ b/spa/package.json
@@ -10,8 +10,7 @@
     "e2e": "node test/e2e/runner.js",
     "test": "npm run e2e",
     "lint": "eslint --ext .js,.vue src test/e2e/specs",
-    "build": "node build/build.js",
-    "postinstall": "npm audit fix"
+    "build": "node build/build.js"
   },
   "dependencies": {
     "axios": "^0.18.0",
