--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/chriskonings/do-more#readme",
   "dependencies": {
     "express": "^4.16.3",
+    "firebase-admin": "^5.12.1",
     "serve-static": "^1.13.2",
     "yelp-fusion": "^2.0.3"
   }
