--- a/spa/package.json
+++ b/spa/package.json
@@ -13,17 +13,8 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "axios": "^0.18.0",
-    "firebase": "^4.13.1",
-    "google-maps": "^3.2.1",
-    "vue": "^2.5.16",
-    "vue-multiselect": "^2.1.0",
-    "vue-router": "^3.0.1",
-    "vue2-google-maps": "^0.8.11",
-    "vuefire": "^1.4.5",
-    "chalk": "^2.0.1",
-    "semver": "^5.3.0",
     "autoprefixer": "^7.1.2",
+    "axios": "^0.18.0",
     "babel-core": "^6.22.1",
     "babel-eslint": "^8.2.1",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
@@ -34,6 +25,7 @@
     "babel-preset-env": "^1.3.2",
     "babel-preset-stage-2": "^6.22.0",
     "babel-register": "^6.22.0",
+    "chalk": "^2.0.1",
     "chromedriver": "^2.27.2",
     "copy-webpack-plugin": "^4.0.1",
     "cross-spawn": "^5.0.1",
@@ -47,8 +39,11 @@
     "eslint-plugin-vue": "^4.0.0",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.4",
+    "firebase": "^4.13.1",
     "friendly-errors-webpack-plugin": "^1.6.1",
+    "google-maps": "^3.2.1",
     "html-webpack-plugin": "^2.30.1",
+    "http2": "^3.3.7",
     "markerwithlabel": "^2.0.1",
     "nightwatch": "^1.0.6",
     "node-notifier": "^5.1.2",
@@ -63,12 +58,18 @@
     "rimraf": "^2.6.0",
     "sass-loader": "^7.0.1",
     "selenium-server": "^3.0.1",
+    "semver": "^5.3.0",
     "shelljs": "^0.7.6",
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^1.0.1",
+    "vue": "^2.5.16",
     "vue-loader": "^13.3.0",
+    "vue-multiselect": "^2.1.0",
+    "vue-router": "^3.0.1",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.2",
+    "vue2-google-maps": "^0.8.11",
+    "vuefire": "^1.4.5",
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-server": "^2.9.1",
