--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "yelp-fusion": "^2.0.3"
   },
   "engines": {
-    "node": ">= 6.0.0",
-    "npm": ">= 3.0.0"
+    "node": "6.10.0",
+    "npm": "6.1.0"
   }
 }
