--- a/spa/package.json
+++ b/spa/package.json
@@ -77,8 +77,8 @@
   },
   "devDependencies": {},
   "engines": {
-    "node": ">= 6.0.0",
-    "npm": ">= 3.0.0"
+    "node": "6.10.0",
+    "npm": "6.1.0"
   },
   "browserslist": [
     "> 1%",
