--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node index.js",
     "dev": "node index.js dev",
-    "postinstall": "npm install --prefix spa && npm run build --prefix spa"
+    "postinstall": "npm install --prefix spa",
+    "prestart": "npm run build --prefix spa",
   },
   "repository": {
     "type": "git",
