--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node index.js",
     "dev": "node index.js dev",
     "postinstall": "npm install --prefix spa",
-    "prestart": "npm run build --prefix spa",
+    "prestart": "npm run build --prefix spa"
   },
   "repository": {
     "type": "git",
