--- a/spa/package.json
+++ b/spa/package.json
@@ -34,15 +34,15 @@
     "eslint-config-airbnb-base": "^11.3.0",
     "eslint-friendly-formatter": "^3.0.0",
     "eslint-import-resolver-webpack": "^0.8.3",
-    "eslint-loader": "^1.7.1",
+    "eslint-loader": "^2.1.1",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-vue": "^4.0.0",
-    "extract-text-webpack-plugin": "^3.0.0",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.4",
     "firebase": "^5.6.0",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "google-maps": "^3.2.1",
-    "html-webpack-plugin": "^2.30.1",
+    "html-webpack-plugin": "^3.2.0",
     "markerwithlabel": "^2.0.1",
     "nightwatch": "^1.0.6",
     "node-notifier": "^5.1.2",
@@ -59,10 +59,11 @@
     "selenium-server": "^3.0.1",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
+    "tapable": "1.0.0-beta.5",
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^1.0.1",
     "vue": "^2.5.16",
-    "vue-loader": "^13.3.0",
+    "vue-loader": "^15.4.2",
     "vue-multiselect": "^2.1.0",
     "vue-router": "^3.0.1",
     "vue-style-loader": "^3.0.1",
@@ -70,12 +71,12 @@
     "vue2-google-maps": "^0.8.11",
     "vuefire": "^1.4.5",
     "vuex": "^3.0.1",
-    "webpack": "^3.6.0",
+    "webpack": "4.19.1",
     "webpack-bundle-analyzer": "^2.9.0",
-    "webpack-dev-server": "^3.1.10",
+    "webpack-cli": "^2.0.6",
+    "webpack-dev-server": "^3.0.0-beta.1",
     "webpack-merge": "^4.1.0"
   },
-  "devDependencies": {},
   "engines": {
     "node": "6.10.0",
     "npm": "6.1.0"
